Gave clone launcher a couple of suggestion repos...
still looks ugly.

--- a/agit/res/layout/clone_launcher.xml
+++ b/agit/res/layout/clone_launcher.xml
@@ -2,6 +2,20 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	android:orientation="vertical" android:layout_width="fill_parent"
 	android:layout_height="fill_parent">
+
+    <com.markupartist.android.widget.ActionBar android:id="@+id/actionbar" style="@style/ActionBar" />
+
+    <Button android:layout_width="fill_parent"
+		android:layout_height="wrap_content" android:id="@+id/SuggestReposButton"
+		android:text="@string/suggest_repos_button"
+        android:gravity="center"
+        android:layout_margin="5dip"
+        style="@style/SmallButton"
+        android:onClick="setUpListView"/>
+
+    <ListView android:id="@android:id/list"
+		android:layout_width="wrap_content" android:layout_height="wrap_content"  android:cacheColorHint="#FFF"/>
+
 	<TextView android:layout_width="fill_parent"
 		android:layout_height="wrap_content" android:text="@string/enter_clone_url" />
 
