Reinstated repo list on dashboard activity

--- a/agit/res/layout/dashboard.xml
+++ b/agit/res/layout/dashboard.xml
@@ -14,4 +14,8 @@
         style="@style/BigButton"
         android:drawableTop="@drawable/clone_picture"
         android:onClick="startCloneLaunchActivity"/>
+
+    <ListView android:id="@android:id/list"
+        android:layout_width="fill_parent" android:layout_height="fill_parent"  android:cacheColorHint="#FFF"/>
+    
 </LinearLayout>
