--- a/agit/res/values/styles.xml
+++ b/agit/res/values/styles.xml
@@ -1,5 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <style name="ExecutionBar">
+        <item name="android:layout_width">fill_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:orientation">horizontal</item>
+        <item name="android:background">@drawable/executionbar_background</item>
+        <item name="android:padding">4dip</item>
+    </style>
+
+
 	<style name="code" parent="@android:style/TextAppearance">
     	<item name="android:textSize">12sp</item>
     	<item name="android:textColor">@android:color/black</item>
