You want a small button, you have to have small 9-patch for its background.
The style changes are irrelevant until we get that small 9patch

--- a/agit/res/layout/clone_launcher.xml
+++ b/agit/res/layout/clone_launcher.xml
@@ -20,11 +20,11 @@
                 android:text="@string/suggest_repos_button"
                 android:gravity="center"
                 android:layout_gravity="center"
-                style="@style/SmallButton"
+                style="@android:style/Widget.Button.Small"
                 android:onClick="setUpListView"/>
 
             <ListView android:id="@android:id/list"
-                android:layout_width="wrap_content" android:layout_height="wrap_content"  android:cacheColorHint="#FFF"/>
+                android:layout_width="wrap_content" android:layout_height="match_parent"  android:cacheColorHint="#FFF"/>
 
             <TextView android:layout_width="fill_parent"
                 android:layout_height="wrap_content" android:text="@string/enter_clone_url" />
