--- a/agit/res/values/styles.xml
+++ b/agit/res/values/styles.xml
@@ -46,7 +46,7 @@
         <item name="android:paddingRight">15dp</item>
     </style>
 
-    <style name="SmallButton" parent="@android:style/Widget.Button">
+    <style name="SmallButton" parent="@android:style/Widget.Button.Small">
         <item name="android:gravity">center_vertical|center_horizontal</item>
         <item name="android:textColor">#FFFFFFFF</item>
         <item name="android:shadowColor">#FF000000</item>
@@ -57,5 +57,6 @@
         <item name="android:background">@drawable/friendly_button</item>
         <item name="android:focusable">true</item>
         <item name="android:clickable">true</item>
+        <item name="android:padding">1dp</item>
     </style>
 </resources>
