--- a/agit/res/values/styles.xml
+++ b/agit/res/values/styles.xml
@@ -5,7 +5,12 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:orientation">horizontal</item>
         <item name="android:background">@drawable/executionbar_background</item>
-        <item name="android:padding">4dip</item>
+        <item name="android:paddingLeft">14dip</item>
+        <item name="android:paddingRight">14dip</item>
+        <item name="android:paddingTop">6dip</item>
+        <item name="android:paddingBottom">6dip</item>
+        <item name="android:baselineAligned">false</item>
+        <item name="android:gravity">center_vertical</item>
     </style>
 
 
