Tidy-up trying to get padding back on lists - and failing
Seems that the ListActivity doc is contradictory:

http://developer.android.com/reference/android/app/ListActivity.html

@android:id/list - correct, I think
@id/android:list - wrong...

--- a/agit/res/layout/dashboard.xml
+++ b/agit/res/layout/dashboard.xml
@@ -43,7 +43,9 @@
             android:text="Android Git client" />
     </RelativeLayout>
 
-    <ListView android:id="@android:id/list"
-        android:layout_width="fill_parent" android:layout_height="fill_parent"  android:cacheColorHint="#FFF"/>
-    
+    <ListView
+        android:id="@android:id/list"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:cacheColorHint="#FFF"/>
 </LinearLayout>
