Failed attempt to get the commit list initial fast scroll working.

--- a/agit/res/layout/branch_view.xml
+++ b/agit/res/layout/branch_view.xml
@@ -11,7 +11,10 @@
 		    style="@style/ActionBar"
 	        />
 
-	<com.madgag.agit.RevCommitListView android:id="@android:id/list"
-		android:layout_width="wrap_content" android:layout_height="wrap_content"  android:cacheColorHint="#FFF"/>
+	<com.madgag.agit.RevCommitListView
+        android:id="@android:id/list"
+        android:fastScrollEnabled="true"
+		android:layout_width="wrap_content"
+        android:layout_height="wrap_content" android:cacheColorHint="#FFF"/>
 
 </LinearLayout>
