--- a/agit/res/drawable/dashboard_background.xml
+++ b/agit/res/drawable/dashboard_background.xml
@@ -2,8 +2,10 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <gradient
+        android:type="radial"
         android:startColor="@color/dashboard_background_start"
         android:endColor="@color/dashboard_background_end"
-        android:gradientRadius="326"
-    android:type="radial" />
+        android:gradientRadius="400"
+        android:centerY="-0.7"
+     />
 </shape>
