--- a/agit/res/layout/dashboard.xml
+++ b/agit/res/layout/dashboard.xml
@@ -8,8 +8,8 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/dashboard_background"
-            android:gravity="right"
-            android:padding="8dip">
+            android:padding="8dip"
+            android:gravity="right">
         <Button
             android:id="@+id/GoCloneButton"
             android:layout_width="wrap_content"
@@ -17,6 +17,7 @@
             android:text="Clone..."
             android:gravity="center"
             android:layout_alignParentRight="true"
+            android:layout_marginLeft="8dip"
             style="@style/BigButton"
             android:drawableTop="@drawable/clone_picture"
             android:onClick="startCloneLaunchActivity"/>
