--- a/agit/res/layout/commit_detail_view.xml
+++ b/agit/res/layout/commit_detail_view.xml
@@ -23,10 +23,7 @@
 		android:layout_width="fill_parent"
 		android:layout_height="0px"
 		android:layout_weight="1"
-        android:fadingEdge="vertical|horizontal"
-        android:fadingEdgeLength="24dip"
-		android:autoLink="web|email|map" android:typeface="monospace"
-		android:textAppearance="?android:attr/textAppearanceSmall" />
+		style="@style/GitMessage" />
 
 	<com.madgag.agit.CommitNavigationView
 		android:id="@+id/commit_navigation"
