--- a/agit/res/values/styles.xml
+++ b/agit/res/values/styles.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <style name="ExecutionBar">
-        <item name="android:layout_width">fill_parent</item>
+        <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:orientation">horizontal</item>
         <item name="android:background">@drawable/executionbar_background</item>
@@ -10,9 +10,15 @@
         <item name="android:paddingTop">6dip</item>
         <item name="android:paddingBottom">6dip</item>
         <item name="android:baselineAligned">false</item>
-        <item name="android:gravity">center_vertical</item>
     </style>
 
+    <style name="GitMessage">
+        <item name="android:textSize">10sp</item>
+        <item name="android:typeface">monospace</item>
+        <item name="android:autoLink">web|email|map</item>
+        <item name="android:fadingEdge">vertical|horizontal</item>
+        <item name="android:fadingEdgeLength">20dip</item>
+	</style>
 
 	<style name="code" parent="@android:style/TextAppearance">
     	<item name="android:textSize">12sp</item>
