--- a/agit/res/layout/tag_view.xml
+++ b/agit/res/layout/tag_view.xml
@@ -8,19 +8,32 @@
 	    android:id="@+id/actionbar"
 	    style="@style/ActionBar"
         />
-	
-	<com.madgag.agit.PersonIdentView
-         android:id="@+id/tv_tag_tagger_ident"
-         android:layout_width="fill_parent"
-         android:layout_height="wrap_content"/>
-         
-    <TextView android:id="@+id/tv_tag_message"
-		android:layout_width="fill_parent"
-		android:layout_height="wrap_content"
-        style="@style/GitMessage" />
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="1.0"
+        android:fadingEdgeLength="32dip">
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:paddingLeft="14dip" android:paddingRight="14dip"
+            android:paddingTop="6dip" android:paddingBottom="6dip" >
 
-	<com.madgag.agit.ObjectSummaryView
-         android:id="@+id/tv_tag_tagged_object"
-         android:layout_width="fill_parent"
-         android:layout_height="wrap_content"/>
+            <com.madgag.agit.PersonIdentView
+                 android:id="@+id/tv_tag_tagger_ident"
+                 android:layout_width="fill_parent"
+                 android:layout_height="wrap_content"/>
+
+            <TextView android:id="@+id/tv_tag_message"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                style="@style/GitMessage" />
+
+            <com.madgag.agit.ObjectSummaryView
+                 android:id="@+id/tv_tag_tagged_object"
+                 android:layout_width="fill_parent"
+                 android:layout_height="wrap_content"/>
+        </LinearLayout>
+    </ScrollView>
 </LinearLayout>
