--- a/agit/res/layout/object_summary_view.xml
+++ b/agit/res/layout/object_summary_view.xml
@@ -6,13 +6,14 @@
 		android:layout_height="24dip"
 		android:src="@drawable/commit_24" />
 	<TextView android:id="@+id/osv_object_id_text"
-		android:layout_width="fill_parent"
+		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
 		android:typeface="monospace"
 		android:textAppearance="?android:attr/textAppearanceSmall" />
-	<FrameLayout
+	<LinearLayout
 		android:id="@+id/osv_type_specific_data_frame"
-        android:layout_width="fill_parent"
+        android:orientation="vertical"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         />
 </merge>
