--- a/agit/res/layout/tag_view.xml
+++ b/agit/res/layout/tag_view.xml
@@ -20,18 +20,8 @@
             android:paddingLeft="14dip" android:paddingRight="14dip"
             android:paddingTop="6dip" android:paddingBottom="6dip" >
 
-            <com.madgag.agit.PersonIdentView
-                 android:id="@+id/tv_tag_tagger_ident"
-                 android:layout_width="fill_parent"
-                 android:layout_height="wrap_content"/>
-
-            <TextView android:id="@+id/tv_tag_message"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                style="@style/GitMessage" />
-
-            <com.madgag.agit.ObjectSummaryView
-                 android:id="@+id/tv_tag_tagged_object"
+            <com.madgag.agit.views.ObjectSummaryView
+                 android:id="@+id/tv_tag_ref_object"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"/>
         </LinearLayout>
