--- a/agit/res/layout/commit_detail_view.xml
+++ b/agit/res/layout/commit_detail_view.xml
@@ -5,8 +5,9 @@
 	android:layout_width="fill_parent"
 	android:layout_height="fill_parent" >
 
-	<TextView android:id="@+id/commit_id_text"
-		android:layout_width="wrap_content" android:layout_height="wrap_content"
+	<com.madgag.agit.views.ObjectIdView android:id="@+id/commit_id"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
 		android:typeface="monospace" />
 
 	<LinearLayout android:id="@+id/commit_people_group"
