--- a/agit/res/layout/commit_detail_view.xml
+++ b/agit/res/layout/commit_detail_view.xml
@@ -5,26 +5,42 @@
 	android:layout_width="fill_parent"
 	android:layout_height="fill_parent" >
 
-	<com.madgag.agit.views.ObjectIdView android:id="@+id/commit_id"
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
-		android:typeface="monospace" />
-
-	<LinearLayout android:id="@+id/commit_people_group"
-        android:orientation="horizontal"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="match_parent"
+        android:layout_weight="1.0"
+        android:fadingEdgeLength="32dip">
 
-	<LinearLayout android:id="@+id/commit_refs_group"
-        android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-        
-	<TextView android:id="@+id/commit_message_text"
-		android:layout_width="fill_parent"
-		android:layout_height="0px"
-		android:layout_weight="1"
-		style="@style/GitMessage" />
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:paddingLeft="7dip" android:paddingRight="7dip"
+            android:paddingTop="6dip" android:paddingBottom="6dip" >
+
+            <com.madgag.agit.views.ObjectIdView android:id="@+id/commit_id"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:typeface="monospace" />
+
+            <LinearLayout android:id="@+id/commit_people_group"
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+            <LinearLayout android:id="@+id/commit_refs_group"
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+            <TextView android:id="@+id/commit_message_text"
+                android:layout_width="fill_parent"
+                android:layout_height="0px"
+                android:layout_weight="1"
+                style="@style/GitMessage" />
+
+            </LinearLayout>
+    </ScrollView>
 
 	<com.madgag.agit.CommitNavigationView
 		android:id="@+id/commit_navigation"
