--- a/agit/res/layout/fetch_progress.xml
+++ b/agit/res/layout/fetch_progress.xml
@@ -21,9 +21,16 @@
 			android:layout_width="160dp" android:layout_height="wrap_content"
 			style="?android:attr/progressBarStyleHorizontal"
 			android:progressDrawable="@android:drawable/progress_horizontal"
-			android:indeterminate="false" android:indeterminateOnly="false" android:paddingRight="5dp" />
-		<TextView android:id="@+id/status_text" android:layout_width="fill_parent" android:layout_weight="2"
-			android:textColor="#ff000000" android:layout_height="wrap_content"
+			android:indeterminate="false"
+            android:indeterminateOnly="false"
+            android:paddingRight="5dp" />
+		<TextView
+            android:id="@+id/status_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="2"
+            android:textColor="#ff000000"
+            android:ellipsize="middle"
 			android:layout_below="@id/status_progress" />
 	</LinearLayout>
 </LinearLayout>
