--- a/agit/res/layout/commit_group_view.xml
+++ b/agit/res/layout/commit_group_view.xml
@@ -1,24 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-	
 	android:orientation="horizontal"
 	android:layout_width="fill_parent"
-    android:layout_height="?android:attr/listPreferredItemHeight"
-    android:paddingLeft="?android:attr/expandableListPreferredItemPaddingLeft"
-    android:textAppearance="?android:attr/textAppearanceLarge"
+    android:layout_height="wrap_content"
+    android:padding="10dip"
     android:gravity="center_vertical"
 	>
 	<ImageView
 		android:id="@+id/commit_file_diff_type"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:layout_marginLeft="20dip"
-		android:layout_marginBottom="5dip"
-		android:src="@drawable/commit" />
+		android:layout_marginRight="10dip"
+		android:src="@drawable/diff_changetype_modify" />
 	<TextView
 		android:id="@+id/commit_file_textview"
-		android:layout_width="wrap_content"
+        android:ellipsize="middle"
+		android:layout_width="match_parent"
 		android:layout_height="wrap_content" />
-		
-		
 </LinearLayout>
