--- a/agit/res/layout/commit_group_view.xml
+++ b/agit/res/layout/commit_group_view.xml
@@ -15,6 +15,8 @@
 	<TextView
 		android:id="@+id/commit_file_textview"
         android:ellipsize="middle"
+        android:textSize="12sp"
+        android:singleLine="true"
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content" />
 </LinearLayout>
