New PHL behaves semi-right, doesn't push-up

--- a/agit/res/layout/rev_commit_view.xml
+++ b/agit/res/layout/rev_commit_view.xml
@@ -12,12 +12,17 @@
     <com.madgag.agit.DiffSliderView android:id="@+id/RevCommitDiffSlider"
 		android:layout_width="wrap_content" android:layout_height="wrap_content"/>
 	</LinearLayout>
-	
-	<com.madgag.agit.BongleView android:fastScrollEnabled="true"
+
+    <com.madgag.pinnedheader.PinnedHeaderLayout
+		android:layout_width="fill_parent"
+		android:layout_height="fill_parent">
+        <ExpandableListView android:fastScrollEnabled="true"
 		android:id="@android:id/list"
 		android:layout_width="fill_parent"
 		android:layout_height="fill_parent"
         android:groupIndicator="@android:color/transparent"
         android:cacheColorHint="#FFF" />
+    </com.madgag.pinnedheader.PinnedHeaderLayout>
+
 
 </LinearLayout>
