Tweak the diff seekbar

--- a/agit/res/layout/diff_seekbar_view.xml
+++ b/agit/res/layout/diff_seekbar_view.xml
@@ -1,18 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <merge xmlns:android="http://schemas.android.com/apk/res/android">
-
+    <TextView
+        android:id="@+id/beforeText"
+		android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:paddingLeft="5dip"
+		android:textSize="8dp"
+            android:text="BEFORE" />
 	<SeekBar android:id="@+id/DiffPlayerSeekBar"
-		android:layout_width="wrap_content" android:layout_height="wrap_content"
-		android:padding="4px" android:progressDrawable="@drawable/diff_seekbar"
-		android:minWidth="120dip" android:maxWidth="160dip"
-		android:cacheColorHint="#FFF" />
-	<TextView android:id="@+id/DiffPlayerSeekBarBeforeLabel"
-		android:layout_width="wrap_content" android:layout_height="wrap_content"
-		android:layout_below="@id/DiffPlayerSeekBar" android:layout_alignLeft="@id/DiffPlayerSeekBar"
-		android:textSize="8dp" android:text="Before" />
-	<TextView android:id="@+id/DiffPlayerSeekBarAfterLabel"
-		android:layout_width="wrap_content" android:layout_height="wrap_content"
-		android:layout_below="@id/DiffPlayerSeekBar"
-		android:layout_alignRight="@id/DiffPlayerSeekBar" android:textSize="8dp"
-		android:text="After" />
+		android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:padding="4dip"
+        android:progressDrawable="@drawable/diff_seekbar"
+		android:minWidth="120dip" android:maxWidth="160dip" />
+	<TextView
+        android:id="@+id/afterText"
+		android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="8dip"
+        android:paddingRight="5dip"
+		android:text="AFTER" />
 </merge>
