--- a/agit/res/layout/branch_list_item.xml
+++ b/agit/res/layout/branch_list_item.xml
@@ -2,11 +2,13 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	android:layout_width="fill_parent"
 	android:layout_height="fill_parent"
+    android:orientation="vertical"
 	android:padding="10dip">
     <TextView
 		android:id="@+id/branch_name"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:textAppearance="?android:attr/textAppearanceLarge" />
+    
 	<include layout="@layout/rev_commit_list_item" />
 </LinearLayout>
