Use android-pinned-header-listviews for the commit diff list- closes #3
https://github.com/rtyley/android-pinned-header-listviews

--- a/agit/res/layout/rev_commit_view.xml
+++ b/agit/res/layout/rev_commit_view.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              xmlns:phl="com.madgag.android.listviews.pinnedheader"
 	android:id="@+id/rev_commit_layout_root"
 	android:orientation="vertical"
 	
@@ -13,7 +14,7 @@
 		android:layout_width="wrap_content" android:layout_height="wrap_content"/>
 	</LinearLayout>
 
-    <com.madgag.pinnedheader.PinnedHeaderLayout
+    <com.madgag.android.listviews.pinnedheader.PinnedHeaderLayout
 		android:layout_width="fill_parent"
 		android:layout_height="fill_parent">
         <ExpandableListView android:fastScrollEnabled="true"
@@ -22,7 +23,7 @@
 		android:layout_height="fill_parent"
         android:groupIndicator="@android:color/transparent"
         android:cacheColorHint="#FFF" />
-    </com.madgag.pinnedheader.PinnedHeaderLayout>
+    </com.madgag.android.listviews.pinnedheader.PinnedHeaderLayout>
 
 
 </LinearLayout>
